--- a/inside.css
+++ b/inside.css
@@ -85,7 +85,7 @@ nav ul li img{
     }
 
     to{
-        background-image: url(/picture/luffystreet.png);
+        background-image: url(picture/luffystreet.png);
     }
 }
 
