--- a/index.css
+++ b/index.css
@@ -15,6 +15,10 @@ body{
     background-color: black;
 }
 
+.img{
+    display: none;
+}
+
 img{
     width: 50%;
     display: block;
@@ -44,18 +48,45 @@ a{
     margin-top: 5%;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1024px) {
+
+    .img{
+        display: block;
+    }      
 
     img{
-        margin-top: 25%;
+        margin-top: 5%;
+        width: 20%;
+    }
+
+    h1{
+        margin-top: 5%;
+    }
+
+    a{
+        width: 10%;
+        border-radius: 2rem;
+    }
+}
+
+@media screen and (min-width: 768px){
+    .img{
+        display: block;
+    }
+
+    img{
+        margin-top: 20%;
         width: 40%;
     }
 
     h1{
-        font-size: 35px;
+        margin-top: 5%;
+        font-size: 65px;
     }
 
     a{
+        width: 50%;
         font-size: 25px;
+        border-radius: 2rem;
     }
 }
